move js and css to static resource

--- a/src/package.xml
+++ b/src/package.xml
@@ -4,5 +4,9 @@
         <members>customrtf</members>
         <name>ApexComponent</name>
     </types>
+    <types>
+        <members>customrtf</members>
+        <name>StaticResource</name>
+    </types>
     <version>29.0</version>
 </Package>
